# chatgpt-pdf

./: .env  .gitignore  AGENTS.md  CLAUDE.md  QWEN.md  README.md  app.py  config.py  pyproject.toml  requirements-linux.txt  requirements-old.txt  requirements.txt  setup.cmd
db/pd/: index.faiss  index.pkl
pages/: CardDetection.py  Chat.py  CompanyMatch.py  CompanyVectorDB.py  CompressPdf.py  ContractInfoExtractLLM.py  ContractInfoLLM.py  ExtractSeal.py  HandprintDetection.py  Ocr.py  OcrBusinessDeepSeek.py  OcrBusinessLLM.py  OcrBusinessVL.py  OcrIdcardDeepSeek.py  OcrIdcardLLM.py  OcrIdcardVL.py  OcrImage.py  OcrInvoiceLLM.py  OcrInvoiceVL.py  OcrPdf.py  OcrSeal.py  SmartQAKB.py  StreamChat.py  UpdateModel.py  UploadFileToDfs.py
service/: ChatgptService.py  CompanyMatchService.py  DeepSeekHuaweiService.py  ExtractSealService.py  IPService.py  KnowledgeService.py  OcrService.py  OneApiService.py  PaddleOcrService.py  PdfService.py  StreamChatService.py  StreamingLLMCallbackHandler.py  VectorDBService.py  __init__.py  vllm_inference.py
